--- a/_templates/page.html
+++ b/_templates/page.html
@@ -10,7 +10,7 @@
 
   <div class="ofervivienda">
     <a href="https://www.ofervivienda.com/">
-      <img src="/_static/logo.png">
+      <img src="{{ pathto('_static/logo.png', 1) }}">
     </a>
   </div>
 
