--- a/_templates/page.html
+++ b/_templates/page.html
@@ -4,6 +4,7 @@
   <style>
     .ofervivienda {
       margin: auto;
+      margin-bottom: 20px;
       box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     }
   </style>
