--- a/_templates/page.html
+++ b/_templates/page.html
@@ -7,6 +7,9 @@
       margin-bottom: 20px;
       box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     }
+    .center {
+      text-align: center;
+    }
   </style>
 
   <div class="ofervivienda">
@@ -15,5 +18,18 @@
     </a>
   </div>
 
-    {{ super() }}
+  {{ super() }}
+
+  <div class="center">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- main Apuntes -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-1079279802884664"
+         data-ad-slot="3439801433"
+         data-ad-format="auto"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 {% endblock %}
