--- a/_templates/page.html
+++ b/_templates/page.html
@@ -1,18 +1,17 @@
 {% extends "!page.html" %}
 
 {% block body %}
-  <style>
-    .ofervivienda {
-      margin: auto;
-      margin-bottom: 20px;
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    }
-  </style>
-
-  <div class="ofervivienda">
-    <a href="https://www.ofervivienda.com/">
-      <img src="{{ pathto('_static/logo.png', 1) }}">
-    </a>
+  <div style="margin: auto; margin-bottom: 20px;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- main Apuntes -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-1079279802884664"
+         data-ad-slot="3439801433"
+         data-ad-format="auto"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </div>
   {{ super() }}
 {% endblock %}
