--- a/_templates/page.html
+++ b/_templates/page.html
@@ -1,12 +1,17 @@
 {% extends "!page.html" %}
 
 {% block body %}
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-1079279802884664",
-            enable_page_level_ads: true
-      });
-  </script>
+  <div style="margin: auto; margin-bottom: 20px;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- main Apuntes -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-1079279802884664"
+         data-ad-slot="3439801433"
+         data-ad-format="auto"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
   {{ super() }}
 {% endblock %}
